<resources>
    <string name="app_name">SICK AR</string>
    <string name="toggle_button">info</string>
    <string name="barcode_info_default">Nothing to display! Please first scan a barcode.</string>
    <string name="title_placeholder">Title</string>
    <string name="clear_ar">AR</string>
    <string name="display_ar">AR</string>
    <string name="tabs_prompt">Systems</string>
    <string name="additional">additional</string>
    <string name="picture_title_default">system number</string>
    <string name="system">System</string>
    <string name="picture_title_device">device</string>
    <string name="tamper_detected">DAMAGE DETECTED</string>
    <string name="tamper_info_placeholder">tamper info loading</string>
    <string name="no_images">No Images</string>
    <string name="no_tamper_detected">No damage detected</string>
    <string name="tamper_title_placeholder">Loading Status…</string>

    <string name="images">Images</string>
    <string name="image_select_top">Top</string>
    <string name="image_select_bot">Bot</string>
    <string name="image_select_rf">RF</string>
    <string name="image_select_rb">RB</string>
    <string name="image_select_lf">LF</string>
    <string name="image_select_lb">LB</string>
    <string name="main_imageview_description">main imageview for display</string>
    <string name="reticle">Reticle</string>
    <string name="title_activity_tutorial">TutorialActivity</string>
    <string name="tutorial">Tutorial</string>

    <string name="tutorial_page_1">Point camera at barcodes to scan them</string>
    <string name="tutorial_page_4">Swipe to dismiss or reveal package information</string>
    <string name="tutorial_page_3">The 2nd scan of a package will bring up the augmented reality
        display</string>
    <string name="tutorial_page">tutorial page</string>
    <string name="tutorial_done_button">OK I got it!</string>
    <string name="tutorial_page_last">Return to the app to get started.</string>
    <string name="clear_shared_preferences">Clear Shared Preferences</string>
    <string name="clear_data_cache">Clear Data Cache</string>
    <string name="property">property</string>
    <string name="value">value</string>


</resources>
