<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/outer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/top_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/card_header_background"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/ar_add"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/additional"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:padding="6dp"
            app:srcCompat="@drawable/ic_round_add_circle_24px" />

        <ImageButton
            android:id="@+id/ar_image"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/display_ar"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:padding="6dp"
            app:srcCompat="@drawable/ic_round_image_24px" />

        <ImageButton
            android:id="@+id/ar_min"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/display_ar"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:padding="6dp"
            app:srcCompat="@drawable/ic_round_arrow_drop_down_circle_24px" />

        <ImageButton
            android:id="@+id/ar_close"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/clear_ar"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:padding="6dp"
            app:srcCompat="@drawable/ic_round_cancel_24px" />
    </LinearLayout>

    <TextView
        android:id="@+id/item_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:background="@color/card_header_background"
        android:padding="4dp"
        android:text="@string/title_placeholder"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/item_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/card_body_background"
        android:padding="4dp"
        android:text="@string/barcode_info_default"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@+id/item_name"
        tools:layout_editor_absoluteX="0dp" />

</LinearLayout>
