<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cardLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/card_body_background">

        <ImageButton
            android:id="@+id/images_launch_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/images"
            android:elevation="2dp"
            android:minWidth="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/ArLabel"
            app:layout_constraintTop_toTopOf="@+id/tabLayout"
            app:srcCompat="@drawable/ic_round_image_24px" />

        <TextView
            android:id="@+id/title"
            style="@style/TextAppearance.AppCompat.Headline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/card_header_background"
            android:padding="8dp"
            android:text="@string/title_placeholder"
            android:textColor="@android:color/primary_text_light"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/ArLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:elevation="2dp"
            android:text="@string/clear_ar"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            app:layout_constraintEnd_toEndOf="@+id/clear_ar"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/clear_ar"
            app:layout_constraintTop_toBottomOf="@+id/images_launch_button" />

        <TextView
            android:id="@+id/tabsPrompt"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:elevation="2dp"
            android:padding="4dp"
            android:text="@string/tabs_prompt"
            android:textColor="@android:color/black"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tabLayout" />

        <ImageButton
            android:id="@+id/clear_ar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/clear_ar"
            android:elevation="2dp"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:padding="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/display_ar"
            app:layout_constraintTop_toBottomOf="@+id/ArLabel"
            app:srcCompat="@android:drawable/ic_delete" />

        <Switch
            android:id="@+id/display_ar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="2dp"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:padding="2dp"
            android:showText="false"
            android:splitTrack="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/clear_ar"
            tools:checked="true" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:minWidth="0dp"
            android:minHeight="0dp"
            app:layout_constraintEnd_toStartOf="@+id/images_launch_button"
            app:layout_constraintStart_toEndOf="@+id/tabsPrompt"
            app:layout_constraintTop_toBottomOf="@+id/title" />

        <!--<com.example.sickar.libs.EnhancedWrapContentViewPager-->
        <!--android:id="@+id/viewPager"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--app:layout_constraintTop_toBottomOf="@+id/tabLayout"-->
        <!--tools:layout_editor_absoluteX="-16dp" />-->


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>